Split client components to different files
Former-commit-id: 8a6056a44c09dc4d828b1bcf8a4725b8e86e3868
